<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Open Tree Map</string>
    <string name="filter_button">Filter</string>
    <string name="add_tree_button">Add Tree</string>
    <string name="add_tree_next_button">Next</string>
    <string name="add_tree_step_1">Step 1: Tap to add a tree marker</string>
    <string name="add_tree_step_2">Step 2: Long press to move the tree into position, then click next.</string>
    <string name="move_tree_text">Long press to move the tree into position, then click next.</string>
    <string name="tab_map">Tree Map</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_lists">Lists</string>
    <string name="tab_about">About</string>
    <string name="test_auth">Get/Auth</string>
    <string name="title_activity_map_display">MapDisplay</string>
    <string name="title_activity_login">Login</string>
    <string name="show_map">Map</string>
    <string name="hint_email">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="could_not_connect">Could not connect to server</string>
    <string name="incorrect_username_or_password">Incorrect username or password</string>
    <string name="cancel">Cancel</string>
    <string name="filter_range_to">to</string>
    <string name="finish_filtering">Search</string>
    <string name="clear_filtering">Clear</string>
    <string name="test_get">Get</string>
    <string name="title_activity_request_generator">RequestGenerator</string>
    <string name="show_request_generator">RG</string>
    <string name="about_text">About OpenTreemap</string>
    <string name="profile_text">You have to login or register to see the profiles page</string>
    <string name="list_text">All the lists</string>
    <string name="filter_species_hint">Filter species...</string>
    <string name="unspecified_field_value">Unspecified</string>
    <string name="filter_display_label">Filter:</string>
    <string name="no_address">No Address</string>
    <string name="species_missing">Species Missing</string>
    <string name="dbh_missing">Diameter Missing</string>
    <string name="address_missing">Address Missing</string>
    <string name="toggle_nearby">Nearby</string>
    <string name="toggle_recent">Recent</string>
    <string name="toggle_pending">Pending</string>
    <string name="loginButtonText">Login or Register</string>
    <string name="logoutButton">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="change_picture">Change Profile Picture</string>
    <string name="recent_edits_caption">My Recent Edits</string>
    <string name="unspecified_eco_value">0.0</string>
    <string name="unspecified_eco_field_money">$0.00</string>
    <string name="plot_edit_button">Edit</string>
    <string name="udf_create_done_text">Done</string>
    <string name="udf_create_error_saving">There was a problem saving the item</string>
    <string name="save_plot_edit_button">Save</string>
    <string name="delete">Delete</string>
    <string name="delete_tree">Delete Tree</string>
    <string name="delete_plot">Delete Planting Site</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="confirm_delete_plot_msg">Are you sure you want to delete this Planting Site?</string>
    <string name="confirm_delete_tree_msg">Are you sure you want to delete this Tree?</string>
    <string name="change_tree_picture">Change tree picture</string>
    <string name="use_camera">Use camera</string>
    <string name="use_gallery">Use existing photo</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="no_blank_old_password">Current password cannot be blank</string>
    <string name="bad_old_password">Your current password is incorrect, please try again.</string>
    <string name="new_passwords_dont_match">Password and password confirmation must match.</string>
    <string name="new_passwords_not_strong">New password must be at least 6 characters.</string>
    <string name="password_changed">Password changed.</string>
    <string name="password_change_error">There was a problem changing your password.</string>
    <string name="no_blank_new_password">New password cannot be blank.</string>
    <string name="OK">OK</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="zip_code">Zip Code</string>
    <string name="add_profile_picture">Add Profile Picture</string>
    <string name="register">register</string>
    <string name="Register">Register</string>
    <string name="all_fields_required">Email address, username, and password are required.</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_zip_code">That zip code was not valid.</string>
    <string name="done_registering">Registration successful</string>
    <string name="done_registering_msg">Registration successful.</string>
    <string name="problem_creating_account">There was a problem creating your account.</string>
    <string name="problem_setting_profile_picture">There was a problem setting your profile picture.</string>
    <string name="username_is_taken">Sorry, that username is taken.</string>
    <string name="circumference_label">Circumference</string>
    <string name="scientific_name">Scientific Name</string>
    <string name="common_name">Common Name</string>

    <!-- Internationalization options -->
    <string name="server_date_format">yyyy-MM-dd</string>
    <string name="iso_locale_language">English</string>
    <string name="iso_locale_country">US</string>
    <string name="default_measure_units">in</string>
    <string name="search_field_button">Search Location</string>
    <string name="search_field_hint">search location</string>
    <string name="eco_fieldgroup_header">Ecosystem Benefits</string>
    <string name="eco_currencey_saved_text">saved</string>
    <string name="diameter_missing">Diameter missing</string>
    <string name="current_value">Current Value</string>
    <string name="pending_edits">Pending Edits</string>
    <string name="save">Save</string>
    <string name="tree_image">Tree image</string>
    <string name="user_profile_details">User Profile Details</string>
    <string name="profile_activity_switch_instance">Switch Tree Map</string>
    <string name="instance_switcher_activity_title">Tree Map Switcher</string>
    <string name="instance_switcher_no_instances_found">No tree maps found.</string>
    <string name="instance_switcher_account_question">Have an account?</string>
    <string name="instance_switcher_login">Login to OpenTreeMap</string>
    <string name="instance_switcher_switch_accounts">Switch Accounts</string>
    <string name="instance_switcher_dialog_heading">Please Wait</string>
    <string name="instance_switcher_loading_instances">Loading Tree Maps…</string>
    <string name="instance_switcher_loading_instance">Loading Tree Map</string>
    <string name="instance_switcher_public_instances">See All Public Tree Maps</string>
    <string name="instance_switcher_location_off_text">Location services must be turned on in order to see any nearby tree maps</string>
    <string name="reload_instance_list">Reload</string>
    <string name="my_tree_maps">My Tree Maps</string>
    <string name="neary_tree_maps">Nearby Tree Maps</string>
    <string name="request_failed">Request Failed</string>
    <string name="instance_switcher_request_failed">Failed to load tree maps</string>
    <string name="filter_instances_hint">Filter tree maps…</string>
    <string name="instances_failed">Could not get tree maps</string>
    <string name="cannot_load_instance">Unable to load tree map: </string>
    <string name="map_failed">Unable to setup map; Google Play Store might not be setup correctly"</string>
    <string name="perms_add_tree_fail">Adding trees is not available to all users</string>
    <string name="perms_edit_tree_fail">Editing a tree\'s details is not available to all users</string>
    <string name="perms_add_tree_photo_fail">Adding tree photos is not available to all users</string>
    <string name="collection_udf_empty_text">No items entered yet.</string>
    <string name="planting_site">Planting Site</string>
    <string name="tree">Tree</string>
    <string name="load_more_collection_udf">Load more …</string>
    <string name="udf_save_error">Error saving fields</string>
    <string name="udf_create_next_button_text">Next</string>
    <string name="udf_create_new">Add New</string>

    <string name="save_tree_failure">Can not save tree</string>
    <string name="save_tree_photo_failure">Unable to upload photo</string>
    <string name="choice_filter_clear">Clear</string>
    <string name="date_field_clear">Clear</string>
    <string name="register_continue">Continue</string>
    <string name="report_photo_subject">Inappropriate content has been added. Here are the details:</string>
    <string name="photo_report_failure">Could not report inappropriate photo</string>
    <string name="photo_report_body">Instance: %1$d, Plot Id: %2$d, Photo id: %3$d</string>
    <string name="photo_report_close">Close</string>
    <string name="photo_report_action">Report Photo</string>

</resources>
