<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:label="@string/instance_switcher_activity_title"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:padding="5dp"
    android:orientation="vertical">

    <ListView
        android:id="@+id/instance_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/padding_12"
        android:divider="@color/base" />

    <LinearLayout
        android:id="@+id/instance_list_empty"
        style="@style/instance_switcher_empty_list_view"
        android:orientation="vertical">
        <TextView
            android:id="@+id/instance_list_none_found"
            style="@style/instance_switcher_label"
            android:text="@string/instance_switcher_no_instances_found"
            android:visibility="gone" />

        <TextView
            android:id="@+id/instance_list_location_off"
            style="@style/instance_switcher_label"
            android:text="@string/instance_switcher_location_off_text"
            android:visibility="gone" />

        <Button
            android:id="@+id/instance_list_retry"
            style="@style/padded_full_width_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reload_instance_list"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/have_account_text"
        style="@style/instance_switcher_label"
        android:text="@string/instance_switcher_account_question"
        android:visibility="gone" />

    <Button
        android:id="@+id/login_button"
        style="@style/instance_switcher_button"
        android:text="@string/instance_switcher_login"
        android:visibility="gone" />

    <TextView
        android:id="@+id/username_text"
        style="@style/instance_switcher_label"
        android:visibility="gone" />

    <Button
        android:id="@+id/logout_button"
        style="@style/instance_switcher_button"
        android:text="@string/instance_switcher_switch_accounts" />

    <Button
        android:id="@+id/public_instances_button"
        style="@style/instance_switcher_button"
        android:text="@string/instance_switcher_public_instances" />

</LinearLayout>
