<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/register_email"
        style="@style/register_textbox"
        android:layout_marginTop="@dimen/padding_12"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/register_password"
        style="@style/register_textbox"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_password2"
        style="@style/register_textbox"
        android:hint="@string/verify_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_username"
        style="@style/register_textbox"
        android:hint="@string/username"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/register_firstName"
            style="@style/register_textbox"
            android:layout_weight="1"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/register_lastName"
            style="@style/register_textbox"
            android:layout_weight="1"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:imeOptions="actionNext" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/register"
            style="@style/register_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:onClick="handleContinueClick"
            android:text="@string/register_continue" />
    </RelativeLayout>

</LinearLayout>