<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color" >

    <Button
        android:id="@+id/login"
        style="@style/login_button"
        android:layout_below="@+id/login_password"
        android:background="@color/primary_color"
        android:onClick="login"
        android:text="@string/login" />

    <Button
        android:id="@+id/register"
        style="@style/login_button"
        android:layout_below="@+id/login"
        android:onClick="register"
        android:text="@string/Register" />

    <EditText
        android:id="@+id/login_username"
        style="@style/login_textbox"
        android:hint="@string/hint_email"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/login_password"
        style="@style/login_textbox"
        android:layout_below="@+id/login_username"
        android:hint="@string/hint_password"
        android:inputType="textPassword" >
    </EditText>

</RelativeLayout>