<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <TextView
        android:id="@+id/filterDisplay"
        style="@style/small_map_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_background_color"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/addTreeStep1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/plotPopup"
        android:background="@color/main_background_color"
        android:visibility="gone" >

        <TextView
            android:id="@+id/treeAddInstructions"
            style="@style/add_tree_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_tree_step_1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addTreeStep2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/plotPopup"
        android:background="@color/main_background_color"
        android:visibility="gone" >

        <TextView
            style="@style/add_tree_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:text="@string/add_tree_step_2" />

        <Button
            android:id="@+id/treeAddNext"
            style="@style/small_button_primary"
            android:text="@string/add_tree_next_button" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/plotPopup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:background="@color/popup_background"
        android:minHeight="110dp"
        android:paddingLeft="10dp"
        android:visibility="invisible" >

        <ImageView
            style="@style/plot_thumbnail"
            android:id="@+id/plotImage" />

        <TextView
            android:id="@+id/plotSpecies"
            style="@style/large_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/plotImage"
            android:text="@string/species_missing" />

        <TextView
            android:id="@+id/plotAddress"
            style="@style/medium_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/plotSpecies"
            android:layout_toRightOf="@+id/plotImage"
            android:text="@string/no_address"/>
    </RelativeLayout>

    <include
        android:id="@+id/basemap_controls"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filterDisplay"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        layout="@layout/segmented_button" />

</RelativeLayout>