<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_background_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_background_color"
        android:color="@color/text_dark"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/plot_photo"
            style="@style/plot_thumbnail"
            android:layout_marginTop="0dp"
            android:onClick="handlePhotoDetailClick" />

        <TextView
            android:id="@+id/species"
            style="@style/large_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/plot_photo"
            android:layout_toRightOf="@+id/plot_photo"
            android:text="@string/species_missing" />

        <TextView
            android:id="@+id/address"
            style="@style/medium_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_alignLeft="@+id/species"
            android:layout_below="@+id/species"
            android:text="@string/no_address" />
    </RelativeLayout>

    <fragment
        android:id="@+id/vignette_map_view_mode"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        class="com.google.android.gms.maps.SupportMapFragment" />

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/field_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp" >
            </LinearLayout>

            <Button
                style="@style/plot_edit_button"
                android:onClick="doEdit"
                android:text="@string/plot_edit_button" >
            </Button>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
